@@ -31,6 +31,7 @@ Changes in 4.2:
 - Add torrent search bar for view (269279)
 - Make it possible to hide uploads, downloads and not queued torrents in the queue manager (253779, 251861, 210064)
 - Merge status and name column into one column and use icons to show the status (272160, 228564)
+- Highlight in bold and scroll to newly added torrents (145028)
 
 Changes in 4.1.3:
 - Fix statusbar hiding and showing not working (281674)
